# Simulation-Middleware-and-Benchmarking

./: README.md
HelloWorld/: hello.cc  sum.cc
Wandering and Following/ros2_ws/install/: local_setup.sh  setup.sh  setup.zsh
Wandering and Following/ros2_ws/log/: latest_build
Wandering and Following/ros2_ws/src/br2_vff_avoidance_py/: setup.py
Wandering and Following/ros2_ws/src/br2_vff_avoidance_py/br2_vff_avoidance_py/: avoidance_new.py  avoidance_vff_main.py  goal_navigator.py
activity_1/HelloWorld/: hello  hello.cc  name  name.cc  sum
activity_2/Math_Problem/: Problem_Formulation.md  math_problem.cc  pro_problem  pro_problem.cc
activity_2/Math_Problem_Quadratic/: math_problem  math_problem.cc
activity_2/Sum/: sum  sum.cc  sum_ab  sum_ab.cc
activity_3/: CMakeLists.txt
activity_3/ros2_ws/src/examples/: CMakeLists.txt  package.xml
activity_3/ros2_ws/src/stats/: CMakeLists.txt  package.xml
activity_3/ros2_ws/src/sum/: CMakeLists.txt  package.xml
square_advanced/: readme.md
square_advanced/tb3_ws/install/: local_setup.sh  setup.sh
square_advanced/tb3_ws/log/: latest_build
square_advanced/tb3_ws/src/robot_trajectory/: CMakeLists.txt  readme.md
tf2_ROS2 /ros_ws/install/: local_setup.sh  setup.bash  setup.sh
tf2_ROS2 /ros_ws/log/: latest_build
tf2_ROS2 /ros_ws/src/learning_tf2_cpp/: CMakeLists.txt
wander_and_avoid/install/: local_setup.sh  setup.ps1  setup.sh
wander_and_avoid/log/: latest_build
wander_and_avoid/wander_and_avoid/: CMakeLists.txt  README.md
wander_and_avoid/wander_and_avoid/src/: follower_robot.cpp  wander_and_avoid.cpp
(+40 files in other folders)
